@@ -15,6 +15,8 @@ subjectProfileTextPlot(
   subsetValue = NULL,
   subjectVar = "USUBJID",
   subjectSubset = NULL,
+  subjectSample = NULL,
+  seed = 123,
   xLab = "",
   yLab = "",
   title = "Subject information",
@@ -72,6 +74,13 @@ Records from \code{data} are then mapped by the \code{subjectVar} variable.}
 
 \item{subjectSubset}{(optional) Character vector with subjects of interest 
 (available in \code{subjectVar} of \code{data}), NULL by default.}
+
+\item{subjectSample}{Integer with number of random subject(s) that should be considered,
+e.g. to check the created patient profiles for a subset of the data.
+By default, all specified subjects are considered (set to NULL).}
+
+\item{seed}{Integer with seed used to select random subjects 
+if \code{subjectSample} is specified.}
 
 \item{xLab}{string, label for the x-axis}
 
